# GRPO_Margin

./: .gitignore  README.md  comparison.md  pyproject.toml
configs/accelerate/: single_gpu.yaml
configs/compare/: gsm8k.yaml  paper_qwen3_4b_seed42.yaml  paper_seed42.yaml  smoke.yaml
configs/data/: gsm8k.yaml  paper.yaml  paper_qwen3_4b.yaml  smoke.yaml
configs/eval/: gsm8k.yaml  paper.yaml  paper_qwen3_4b.yaml  smoke.yaml
configs/experiments/: ablations.yaml  ablations_qwen3_4b.yaml  main.yaml
configs/train/: gsm8k_boundary.yaml  gsm8k_grpo.yaml  paper_boundary_seed42.yaml  paper_grpo_seed42.yaml  paper_qwen3_4b_boundary_seed42.yaml  paper_qwen3_4b_grpo_seed42.yaml  smoke_boundary.yaml  smoke_grpo.yaml
src/bm_grpo/: __init__.py  compare.py  config.py  evaluate.py  experiments.py  margin.py  rewards.py  runtime.py  smoke_generate.py  train.py  trainer.py
src/bm_grpo/data/: __init__.py  adapters.py  audit.py  normalize.py  prepare.py
tests/: test_compare.py  test_config.py  test_data.py  test_evaluate_cli.py  test_experiments.py  test_margin.py  test_precision.py  test_resume.py  test_rewards.py  test_train_paths.py  test_trainer.py
